[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfxpy"
version = "0.3.3"
authors = [
  { name="Sayantan", email="sayantanpatra68@gmail.com" },
]
description = "A DataFrame workflow accelerator for fast, deterministic data prep and analysis."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pandas", "data-science", "machine-learning", "data-cleaning", "eda", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
]

[project.urls]
"Homepage" = "https://github.com/sayantancodex/dfxpy"
"Bug Tracker" = "https://github.com/sayantancodex/dfxpy/issues"
"Documentation" = "https://github.com/sayantancodex/dfxpy#readme"
"Source" = "https://github.com/sayantancodex/dfxpy"

[project.scripts]
dfxpy = "dfxpy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dfxpy*"]
